# GpuDatastructures

./: .gitignore  CMakeLists.txt  README.md  average_across_runs.py  measure.sh  output1  rules.txt  tmp_rules.txt  tmp_rules_20.txt  tmp_rules_38.txt  tmp_rules_46.txt  tmp_rules_56.txt  tmp_rules_69.txt  tmp_rules_80.txt  viz.py
bench/: demo.fpcore  haskell.fpcore
bench/numerics/: fma.fpcore
results/10_exp_20rules/: metrics_output_20rules_t1.json  metrics_output_20rules_t10.json  metrics_output_20rules_t2.json  metrics_output_20rules_t3.json  metrics_output_20rules_t4.json  metrics_output_20rules_t5.json  metrics_output_20rules_t6.json  metrics_output_20rules_t7.json  metrics_output_20rules_t8.json  metrics_output_20rules_t9.json
results/10_exp_38rules/: metrics_output_38rules_t1.json  metrics_output_38rules_t10.json  metrics_output_38rules_t2.json  metrics_output_38rules_t3.json  metrics_output_38rules_t4.json  metrics_output_38rules_t5.json  metrics_output_38rules_t6.json  metrics_output_38rules_t7.json  metrics_output_38rules_t8.json  metrics_output_38rules_t9.json
results/10_exp_46rules/: metrics_output_46rules_t1.json  metrics_output_46rules_t10.json  metrics_output_46rules_t2.json  metrics_output_46rules_t3.json  metrics_output_46rules_t4.json  metrics_output_46rules_t5.json  metrics_output_46rules_t6.json  metrics_output_46rules_t7.json  metrics_output_46rules_t8.json  metrics_output_46rules_t9.json
results/10_exp_56rules/: metrics_output_56rules_t1.json  metrics_output_56rules_t10.json  metrics_output_56rules_t2.json  metrics_output_56rules_t3.json  metrics_output_56rules_t4.json  metrics_output_56rules_t5.json  metrics_output_56rules_t6.json  metrics_output_56rules_t7.json  metrics_output_56rules_t8.json  metrics_output_56rules_t9.json
results/20_exp_20rules/: metrics_output_20rules_t1.json  metrics_output_20rules_t10.json  metrics_output_20rules_t2.json  metrics_output_20rules_t3.json  metrics_output_20rules_t4.json  metrics_output_20rules_t5.json  metrics_output_20rules_t6.json  metrics_output_20rules_t7.json  metrics_output_20rules_t8.json  metrics_output_20rules_t9.json
src/: datastructures.cpp  datastructures.h  eqsat.h  kernel_1MB.cu  linearprobing.cpp  linearprobing.cu  linearprobing.h  main.cpp  make_unionfind_test.cpp  metrics.cpp  metrics.h  parser.cpp  parser.h  rules.cpp  rules.h  test.cpp  unionfind.cpp
unionfindtestdata/: expected.data  mergers.data
(+157 files in other folders)
